<resources>
    <string name="app_name">Micro Blogging App</string>
    <string name="new_user_sign_up"><font color="white">NEW USER ? SIGN UP</font></string>
    <string name="login">LOGIN</string>
    <string name="loginn">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOGIN</string>
    <string name="shahid_raza">Shahid Raza</string>
    <string name="Date">Posted on 5th May</string>
    <string name="Content">The grandfather paradox is a hypothetical logical problem that could arise if a being travels back to a particular time in the past. The term comes from the concept that a person travels back to a time before their grandfather had children and assassinates him. This could make their own birth impossible.            </string>
    <string name="likes">2,098 likes</string>
    <string name="likes_">likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
