<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="18dp"
        app:cardMaxElevation="25dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="18dp"

                android:text="@string/shahid_raza"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/Date"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/date"
                android:padding="25dp"
                android:text="@string/Content"
                android:textSize="18sp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/heart"
                    android:layout_marginStart="12dp"/>

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/chat"
                    android:layout_marginStart="8dp"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/send"
                    android:layout_marginStart="8dp"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp"
                    android:text="@string/likes"
                    android:textSize="16sp"
                    android:layout_marginStart="12dp"/>

                <TextView
                    android:id="@+id/likes_"
                    android:layout_toEndOf="@id/likes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="18dp"
                    android:layout_marginStart="6dp"
                    android:text="@string/likes_"
                    android:textSize="18sp" />

            </RelativeLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</RelativeLayout>